--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "string-strip-html": "^13.0.6",
     "helmet": "^6.0.1",
     "bcrypt": "^5.1.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "jsonwebtoken":"^9.0.0"
   },
   "devDependencies": {
     "jest": "^29.3.1",
