--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "string-strip-html": "^13.0.6",
     "helmet": "^6.0.1",
     "bcrypt": "^5.1.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "jsonwebtoken":"^9.0.0"
   },
   "devDependencies": {
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
-    "prisma": "^4.9.0",
     "supertest": "^6.3.3"
   }
 }
