--- a/package.json
+++ b/package.json
@@ -6,27 +6,24 @@
   "type": "module",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
-    "test": "jest"
+    "dev": "nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "string-strip-html": "^13.0.6",
-    "helmet": "^6.0.1",
-    "bcrypt": "^5.1.0",
-    "uuid": "^9.0.0",
-    "jsonwebtoken":"^9.0.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "jest": "^29.3.1",
-    "nodemon": "^2.0.20",
-    "supertest": "^6.3.3"
+    "nodemon": "^2.0.20"
   }
 }
